--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ certifi==2019.6.16
 chardet==3.0.4
 defusedxml==0.6.0
 Django==2.2.10
-django-allauth==0.40.0
-django-crispy-forms==1.14.0
-django-filter==22.1
+django-allauth
+django-crispy-forms
+django-filter
 idna==2.8
 oauthlib==3.1.0
 Pillow==9.2.0
